// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipient List Actions .createRecipientList when uploading csv 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "data": "csv-file",
      },
      "method": "POST",
      "url": "/v1/recipient-lists",
    },
    "type": "CREATE_RECIPIENT_LIST",
  },
]
`;

exports[`Recipient List Actions .deleteRecipientList when passing and id 1`] = `
Array [
  Object {
    "meta": Object {
      "id": Object {
        "id": "delete-me",
      },
      "method": "DELETE",
      "url": "/v1/recipient-lists/[object Object]",
    },
    "type": "DELETE_RECIPIENT_LIST",
  },
]
`;

exports[`Recipient List Actions .getRecipientList when passing and id 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": undefined,
      "url": "/v1/recipient-lists/[object Object]",
    },
    "type": "GET_RECIPIENT_LIST",
  },
]
`;

exports[`Recipient List Actions .listRecipientLists when list is not loaded 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "showErrorAlert": false,
      "url": "/v1/recipient-lists",
    },
    "type": "LIST_RECIPIENT_LISTS",
  },
]
`;

exports[`Recipient List Actions .updateRecipientList when passing and id 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {},
      "id": "update-me",
      "method": "PUT",
      "params": undefined,
      "url": "/v1/recipient-lists/update-me",
    },
    "type": "UPDATE_RECIPIENT_LIST",
  },
]
`;
